syntax = "proto3";

package hello;

option go_package = "./;hello";

message TestReq {
  string input = 1;
}

message TestApiData {
  string version = 1;
  string srvVersion = 2;
}

message TestApiOutput {
  int32 code = 1;
  string msg = 2;
  int64 nowTime = 3;
  TestApiData data = 4;
}

//枚举消息类型
enum PhoneType {
  MOBILE = 0; //proto3版本中，首成员必须为0，成员不应有相同的值
  HOME = 1;
  WORK = 2;
}